[project]
name = "agent-runtime-template"
version = "0.1.0"
description = "Template for agent runtime with MCP server integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0", "httpx>=0.27.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
